# FS22-API

./: .gitignore  pyproject.toml
farmsim22_api/: cli.py  fields.py  vehicle_roster.py
farmsim22_api/data/: __init__.py  collectibles.py  economy.py  farm.py  fields.py  meta.py
